hphp/hack/test/typecheck/destructure/simple.php.exp
ERROR: File "simple.php", line 8, characters 18-19:
Variable `$y` is undefined, or not always defined. (Naming[2050])
  File "simple.php", line 4, characters 30-31:
  Did you mean `$x` instead?
ERROR: File "simple.php", line 9, characters 18-19:
Variable `$i` is undefined, or not always defined. (Naming[2050])
  File "simple.php", line 4, characters 30-31:
  Did you mean `$x` instead?
ERROR: File "simple.php", line 7, characters 3-20:
hh_expect type mismatch (Typing[4453])
  File "simple.php", line 7, characters 13-15:
  Expected `int`
  File "simple.php", line 4, characters 12-28:
  But got `shape('a' => int)`
ERROR: File "simple.php", line 7, characters 18-19:
Invalid argument (Typing[4110])
  File "simple.php", line 7, characters 13-15:
  Expected `int`
  File "hh_single_type_check_magic.hhi", line 4, characters 97-97:
    via this generic `T`
  File "simple.php", line 4, characters 12-28:
  But got `shape('a' => int)`
